--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .btn-primary {
+        @apply bg-primary-500 text-button hover:bg-primary-600 text-white py-4 px-6 rounded-sm
+    }
+    .btn-secondary {
+        @apply bg-transparent text-button hover:bg-gray-50 py-4 px-6 border border-black hover:border-transparent rounded-sm
+    }
+    /* ... */
+  }
