--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,13 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer components {
   .btn-primary {
-    @apply bg-primary-500 hover:bg-primary-300  flex items-center justify-center text-button text-white py-4 px-6 rounded-sm transition-all duration-300;
+    @apply bg-primary-500 dark:bg-primary-400 dark:hover:bg-primary-500 hover:bg-primary-400  flex items-center justify-center text-button text-white font-medium py-4 px-6 rounded-sm transition-all duration-300;
   }
   .btn-secondary {
-    @apply bg-transparent  flex items-center justify-center  dark:hover:bg-gray-800 text-button hover:bg-gray-50 dark:text-white border border-black dark:border-white hover:border-transparent py-4 px-6 rounded-sm transition-all duration-300;
+    @apply bg-gray-600/50 hover:bg-gray-600/70  flex items-center justify-center text-button text-white  py-4 px-6 rounded-sm transition-all duration-300;
   }
   .icon-scroll {
     position: relative;
@@ -18,10 +17,10 @@
     box-shadow: inset 0 0 0 1px #fff;
     border-radius: 25px;
   }
-  
+
   .icon-scroll__before {
     position: absolute;
-    content: '';
+    content: "";
     width: 8px;
     height: 8px;
     background: #fff;
@@ -32,7 +31,7 @@
     animation-iteration-count: infinite;
     animation-name: scroll;
   }
-  
+
   @keyframes scroll {
     0% {
       opacity: 0;
